# automation_hub

./: .gitignore  COPILOT_HUB_AUTOMATION.md  LICENSE  README.md  notes.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: python-tests.yml
gitignore/: .gitignore
src/: __init__.py  ai_utils.py  config.py  file_organizer.py  main.py  password_generator.py
src/system_dashboard/: config.py  models.py  utils.py
src/system_dashboard/monitors/: cpu.py  disk.py  memory.py  network.py
tests/: test_ai_utils.py  test_config.py  test_network_info.py  test_password_generator.py
