[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-dashboard"
version = "0.1.0"
description = "Professional system monitoring dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "McswazStingHub-Ltd" }
]

dependencies = [
    "psutil>=7.1.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "black",
    "ruff",
    "isort",
    "mypy",
]

[project.scripts]
system-dashboard = "system_dashboard.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
